--- a/Day4/project-02/style.css
+++ b/Day4/project-02/style.css
@@ -5,10 +5,8 @@
 
 ul, ol {
   padding: 0;
-}
-
-li {
-  list-style-type: none;
+  margin: 0;
+  list-style: none;
 }
 
 a {
@@ -25,4 +23,100 @@ html {
 
 /* Header: BEGIN */
 
+body {
+  padding: 100px;
+  background-color: #BFC8E6;
+}
+
+h1 {
+  font-size: 32px;
+  line-height: 40px;
+  margin-bottom: 24px;
+}
+
+header {
+  margin-bottom: 70px;
+}
+
+form, nav, ul, li {
+  display: inline-block;
+}
+
+header nav {
+  text-align: right;
+}
+
+header nav {
+  width: 70%;
+  height: 64px;
+
+  /* background-color: aqua; */
+}
+
+header form {
+  width: 25%;
+  button {
+    height: 100%;
+  }
+  input {
+    height: 100%;
+    font-size: 16px;
+    padding: 16px;
+  }
+}
+
+header li {
+  padding: 16px;
+  background-color: white;
+  transition: all ease-in-out 0.5s;
+  border-radius: 8px;
+  &:hover {
+    background-color: #849FFF;
+    color: white;
+    cursor: pointer;
+  }
+}
+
+header a {
+  color: #151B32;
+}
+
 /* Header: END */
+
+/* User-card: BEGIN */
+
+.user-card {
+  display: inline-block;
+  width: 327px;
+  height: 208px;
+  background-color: aqua;
+  padding: 24px;
+  border-radius: 16px;
+  background-color: white;
+  img {
+    width: 97px;
+    height: 97px;
+    border-radius: 50%;
+  }
+  li a {
+    padding: 2px 8px;
+    border: 1px solid #BFC8E6;
+    margin-right: 4px;
+    border-radius: 10px;
+    transition: all ease-in-out 0.5s;
+    color: #516FD4;
+    background-color: white;
+    &:hover {
+      background-color: #516FD4;
+      color: white;
+    }
+  }
+
+  .content {
+    width: calc(327px - 97px - 16px - 48px);
+    display: inline-block;
+  }
+}
+
+
+/* User-card: END */
