--- a/Day5/project-03/styles.css
+++ b/Day5/project-03/styles.css
@@ -80,7 +80,7 @@ header li a {
   display: flex;
 }
 
-.content {
+.banner .content {
   width: 50%;
   padding-right: 60px;
   h1 {
@@ -107,3 +107,44 @@ header li a {
 }
 
 /* Banner: END */
+
+
+/* Teachers: BEGIN */
+
+#teachers > p {
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 18px;
+
+}
+
+#teachers h2 {
+  margin-bottom: 70px;
+  text-align: center;
+  font-size: 32px;
+}
+
+.teachers {
+  display: flex;
+  gap: 32px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.teachers img {
+  width: 295px;
+  height: 350px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+.teacher {
+  background-color: #fff;
+  border-radius: 16px;
+}
+
+.teacher .content {
+  padding: 0 20px;
+}
+
+/* Teachers: END */
