--- a/Day8/project-05/assets/css/reset.css
+++ b/Day8/project-05/assets/css/reset.css
@@ -127,3 +127,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/* Customize Reset CSS */
+
+a {
+	text-decoration: none;
+	color: inherit;
+}
