--- a/Day11/assets/css/main-prefix.css
+++ b/Day11/assets/css/main-prefix.css
@@ -1,4 +1,12 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 * {
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -39,8 +47,14 @@ a:visited {
 }
 
 .d-flex-between {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -49,6 +63,8 @@ a:visited {
 	font-family: "Poppins", serif;
 	color: #fff;
 	border-radius: 8px;
+	-webkit-transition: all ease-in-out 0.3s;
+	-o-transition: all ease-in-out 0.3s;
 	transition: all ease-in-out 0.3s;
 	cursor: pointer;
 	border: none;
@@ -77,6 +93,7 @@ a:visited {
 	font-size: 18px;
 	font-weight: 600;
 	font-family: "Poppins", serif;
+	-webkit-box-shadow: 0px 30px 30px -18px rgba(229, 89, 54, 0.16);
 	box-shadow: 0px 30px 30px -18px rgba(229, 89, 54, 0.16);
 	margin-left: auto;
 	margin-right: auto;
@@ -97,6 +114,8 @@ header {
 			color: #676a6c;
 			font-size: 14px;
 			font-weight: 500;
+			-webkit-transition: all ease-in-out 0.3s;
+			-o-transition: all ease-in-out 0.3s;
 			transition: all ease-in-out 0.3s;
 			position: relative;
 			&:hover {
@@ -104,6 +123,8 @@ header {
 			}
 			&::after {
 				width: 0;
+				-webkit-transition: width ease-in-out 0.3s;
+				-o-transition: width ease-in-out 0.3s;
 				transition: width ease-in-out 0.3s;
 				content: "";
 				position: absolute;
@@ -143,19 +164,29 @@ header {
 /* recent */
 
 #recent {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: stretch;
+	-ms-flex-align: stretch;
 	align-items: stretch;
 	gap: 56px;
 }
 
 #recent .left-content,
 #recent .right-content {
+	-ms-flex-negative: 1;
 	flex-shrink: 1;
+	-webkit-box-flex: 1;
+	-ms-flex-positive: 1;
 	flex-grow: 1;
 }
 
 #recent .left-content {
+	-ms-flex-preferred-size: 626px;
 	flex-basis: 626px;
 	h2 {
 		font-size: 40px;
@@ -169,6 +200,7 @@ header {
 	background-color: #ececec;
 	border-radius: 10px;
 	padding: 30px;
+	-ms-flex-preferred-size: 488px;
 	flex-basis: 488px;
 
 	form {
@@ -180,6 +212,8 @@ header {
 		padding: 18px 20px;
 		background-color: #fff;
 		border-radius: 8px;
+		-webkit-box-flex: 1;
+		-ms-flex-positive: 1;
 		flex-grow: 1;
 		border: none;
 	}
@@ -193,8 +227,14 @@ header {
 	}
 
 	.recent-item {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-pack: start;
+		-ms-flex-pack: start;
 		justify-content: flex-start;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 		gap: 20px;
 		margin-bottom: 20px;
@@ -222,6 +262,7 @@ header {
 
 .blogs__inner {
 	gap: 30px;
+	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 	padding: 112px 0 80px;
 	margin-left: auto;
@@ -230,6 +271,8 @@ header {
 
 #blogs .blog-item {
 	min-width: 370px;
+	-webkit-box-flex: 1;
+	-ms-flex: 1 1 370px;
 	flex: 1 1 370px;
 }
 
@@ -260,8 +303,14 @@ header {
 /* footer */
 
 .footer__top {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
 	justify-content: space-between;
+	-webkit-box-align: stretch;
+	-ms-flex-align: stretch;
 	align-items: stretch;
 	gap: 40px;
 	margin-bottom: 40px;
@@ -303,6 +352,8 @@ header {
 			color: #676a6c;
 			font-size: 14px;
 			font-weight: 500;
+			-webkit-transition: all ease-in-out 0.3s;
+			-o-transition: all ease-in-out 0.3s;
 			transition: all ease-in-out 0.3s;
 			position: relative;
 			&:hover {
@@ -310,6 +361,8 @@ header {
 			}
 			&::after {
 				width: 0;
+				-webkit-transition: width ease-in-out 0.3s;
+				-o-transition: width ease-in-out 0.3s;
 				transition: width ease-in-out 0.3s;
 				content: "";
 				position: absolute;
@@ -327,8 +380,14 @@ header {
 }
 
 footer .socials {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
 	justify-content: flex-end;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	gap: 16px;
 	a {
@@ -338,6 +397,8 @@ footer .socials {
 		border: 1px solid #ccc;
 		font-size: 24px;
 		color: #ccc;
+		-webkit-transition: all ease-in-out 0.3s;
+		-o-transition: all ease-in-out 0.3s;
 		transition: all ease-in-out 0.3s;
 	}
 	a:hover {
