--- a/Day15/project-06/assets/css/responsive.css
+++ b/Day15/project-06/assets/css/responsive.css
@@ -14,7 +14,27 @@
 	.container {
 		width: 540px;
 	}
+	p {
+		color: aqua;
+	}
 }
 
 @media (max-width: 575.98px) {
 }
+
+/*  */
+
+/* @media screen and (min-width: 576px) and (max-width: 767.98px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 991.98px) {
+}
+
+@media screen and (min-width: 992px) and (max-width: 1199.98px) {
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1399.98px) {
+}
+
+@media screen and (min-width: 1400px) {
+} */
