--- a/Day16/grid-system-flexbox.css
+++ b/Day16/grid-system-flexbox.css
@@ -25,55 +25,79 @@
 .row {
 	display: flex;
 	flex-wrap: wrap;
-	background-color: violet;
+	margin-left: calc(-0.5 * var(--gutter-x));
+	margin-right: calc(-0.5 * var(--gutter-x));
+
+	margin-top: calc(-0.5 * var(--gutter-y));
+	margin-bottom: calc(-0.5 * var(--gutter-y));
+}
+
+.row > * {
+	padding-left: calc(0.5 * var(--gutter-x));
+	padding-right: calc(0.5 * var(--gutter-x));
+
+	padding-top: calc(0.5 * var(--gutter-y));
+	padding-bottom: calc(0.5 * var(--gutter-y));
 }
 
 .g-0,
 .gx-0 {
-	margin-left: calc(-0.5 * 0.25rem);
-	margin-right: calc(-0.5 * 0.25rem);
-}
-
-.row.g-0 > *,
-.row.gx-0 > * {
-	padding-left: calc(0.5 * 0);
-	padding-right: calc(0.5 * 0);
+	--gutter-x: 0;
 }
 
 .g-1,
 .gx-1 {
-	margin-left: calc(-0.5 * 0.25rem);
-	margin-right: calc(-0.5 * 0w5rem);
-}
-
-.row.g-1 > *,
-.row.gx-1 > * {
-	padding-left: calc(0.5 * 0.25rem);
-	padding-right: calc(0.5 * 0.25rem);
+	--gutter-x: 0.25rem;
 }
 
 .g-2,
 .gx-2 {
-	margin-left: calc(-0.5 * 0.5rem);
-	margin-right: calc(-0.5 * 0.5rem);
-}
-
-.row.g-2 > *,
-.row.gx-2 > * {
-	padding-left: calc(0.5 * 0.5rem);
-	padding-right: calc(0.5 * 0.5rem);
+	--gutter-x: 0.5rem;
 }
 
 .g-3,
 .gx-3 {
-	margin-left: calc(-0.5 * 1rem);
-	margin-right: calc(-0.5 * 1rem);
+	--gutter-x: 1rem;
 }
 
-.row.g-3 > *,
-.row.gx-3 > * {
-	padding-left: calc(0.5 * 1rem);
-	padding-right: calc(0.5 * 1rem);
+.g-4,
+.gx-4 {
+	--gutter-x: 2rem;
+}
+
+.g-5,
+.gx-5 {
+	--gutter-x: 3rem;
+}
+
+.g-0,
+.gy-0 {
+	--gutter-y: 0;
+}
+
+.g-1,
+.gy-1 {
+	--gutter-y: 0.25rem;
+}
+
+.g-2,
+.gy-2 {
+	--gutter-y: 0.5rem;
+}
+
+.g-3,
+.gy-3 {
+	--gutter-y: 1rem;
+}
+
+.g-4,
+.gy-4 {
+	--gutter-y: 2rem;
+}
+
+.g-5,
+.gy-5 {
+	--gutter-y: 3rem;
 }
 
 .col {
