--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
 	padding: 0;
 	margin: 0;
 }
+
+form {
+	width: 400px;
+	max-width: 100%;
+	border: 1px solid #bbb;
+	border-radius: 8px;
+	padding: 40px 32px;
+}
